@@ -31,6 +31,7 @@
 #include "xio-tcp.h"
 #include "xio-udp.h"
 #include "xio-sctp.h"
+#include "xio-dccp.h"
 #include "xio-socks.h"
 #include "xio-socks5.h"
 #include "xio-proxy.h"
